# internal/models/request.go
@@ -9,7 +9,7 @@ type AttachIotPolicyRequest struct {
 type GetDeviceSensorDataRequest struct {
 	DeviceMacId string `json:"deviceMacId" validate:"required"`
 	Timestamp   string `json:"timestamp" validate:"required"`
-	DateMode    string `json:"dateMode" validate:"required,oneof=hourly daily weekly monthly"`
+	DateMode    string `json:"dateMode" validate:"required,oneof=hourly daily weekly monthly yearly"`
 }
 
 // AddDeviceRequest represents a request to add a new device
@@ -17,4 +17,11 @@ type AddDeviceRequest struct {
 	DeviceID   string `json:"deviceId" validate:"required,min=3,max=50"`
 	DeviceName string `json:"deviceName" validate:"required,min=1,max=100"`
 }
+
+// AddCategoryRequest represents a request to add a new category
+type AddCategoryRequest struct {
+	Name string `json:"name" validate:"required,min=2,max=50"`
+	Type string `json:"type" validate:"required,min=2,max=50"`
+}
+
 
